<resources>
    <string name="app_name">CEK ADAPTOR</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="status_hardware">DB Status</string>
    <string name="not_connected">TIDAK TERHUBUNG!</string>
    <string name="voltasedummy">19.76</string>
    <string name="currentdummy">2.21</string>
    <string name="powerdummy">36.6</string>
    <string name="volt_sysmbol">V</string>
    <string name="current_sysmbol">A</string>
    <string name="power_sysmbol">W</string>
    <string name="tegangan">TEGANGAN</string>
    <string name="arus">ARUS</string>
    <string name="daya">DAYA</string>
    <string name="keterangan">Keterangan :</string>
    <string name="ov">Over Voltage / Kelebihan tegangan</string>
    <string name="uv">Under Voltage / Kekurangan tegangan</string>
    <string name="normal">Normal</string>
    <string name="spek_adaptor">Spesifikasi Adaptor</string>
    <string name="tegangan1">Tegangan</string>
    <string name="arus1">Arus</string>
    <string name="daya1">Daya</string>
    <string name="tegangandummy">19 V</string>
    <string name="arusdummy">3.42 A</string>
    <string name="dayadummy">65 Watt</string>
    <string name="ubah">Ubah</string>
    <string name="ubah_spesifikasi_adaptor">UBAH SPESIFIKASI ADAPTOR</string>
    <string name="tegangan_maksimal">Tegangan Maksimal</string>
    <string name="tegangan_minimal">Tegangan Minimal</string>
</resources>