<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="31dp"
    android:paddingRight="31dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bgrectenam">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ubah_spesifikasi_adaptor"
            android:textSize="22sp"
            android:fontFamily="@font/consola"
            android:textColor="@color/bg4"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@drawable/bgrectlima"
        android:padding="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/consola"
                android:gravity="start"
                android:text="@string/tegangan1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="19sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtvoltage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/consola"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/consola"
                android:gravity="start"
                android:text="@string/volt_sysmbol"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="19sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/consola"
                android:gravity="start"
                android:text="@string/arus1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="19sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtcurrent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/consola"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/consola"
                android:gravity="start"
                android:text="@string/current_sysmbol"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="19sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/consola"
                android:gravity="start"
                android:text="@string/daya1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="19sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtpower"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/consola"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/consola"
                android:gravity="start"
                android:text="@string/power_sysmbol"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="19sp"
                android:textStyle="bold" />
        </TableRow>

        <Button
            android:id="@+id/btnupdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/text3"
            android:text="Ubah" />
    </TableLayout>

</RelativeLayout>